[gd_scene load_steps=28 format=3 uid="uid://dadfs21dt1yo4"]

[ext_resource type="Script" path="res://scripts/Enemy.gd" id="1_p6c1o"]
[ext_resource type="Texture2D" uid="uid://ctluxxg7wsl6n" path="res://character_models/Banette_Walk.png" id="2_dd7hi"]
[ext_resource type="Texture2D" uid="uid://bb0sj08aesloa" path="res://character_models/2d_lights_and_shadows_neutral_point_light.webp" id="2_qgxs4"]
[ext_resource type="PackedScene" uid="uid://cg5cndm8txb50" path="res://scenes/healthbar.tscn" id="3_3skgv"]
[ext_resource type="Texture2D" uid="uid://cyjwabnqetfhy" path="res://character_models/Hurt_Banette.png" id="4_0drs5"]
[ext_resource type="FontFile" uid="uid://ck6f0v3yk0xf4" path="res://assets/m5x7.ttf" id="6_oepyp"]
[ext_resource type="Script" path="res://scripts/DamageDisplay.gd" id="7_s1g7c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3w0cr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b1amh"]
radius = 11.0

[sub_resource type="Animation" id="Animation_itepg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hurt:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ldop6"]
resource_name = "hurt_down"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hurt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_h0ifr"]
resource_name = "hurt_down_left"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hurt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [14, 15]
}

[sub_resource type="Animation" id="Animation_senrl"]
resource_name = "hurt_down_right"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hurt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_6xtus"]
resource_name = "hurt_left"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hurt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}

[sub_resource type="Animation" id="Animation_vn7ok"]
resource_name = "hurt_right"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hurt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_xcehy"]
resource_name = "hurt_up"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hurt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_l5sxy"]
resource_name = "hurt_up_left"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hurt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [10, 11]
}

[sub_resource type="Animation" id="Animation_ev0u0"]
resource_name = "hurt_up_right"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hurt:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="Animation" id="Animation_qqtqc"]
resource_name = "walk_down"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_hc8ey"]
resource_name = "walk_down_left"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_480vy"]
resource_name = "walk_down_right"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_qyerh"]
resource_name = "walk_left"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_xqm7k"]
resource_name = "walk_right"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_8giy6"]
resource_name = "walk_up"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_rgpkr"]
resource_name = "walk_up_left"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_lyvn1"]
resource_name = "walk_up_right"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hgy1n"]
_data = {
"RESET": SubResource("Animation_itepg"),
"hurt_down": SubResource("Animation_ldop6"),
"hurt_down_left": SubResource("Animation_h0ifr"),
"hurt_down_right": SubResource("Animation_senrl"),
"hurt_left": SubResource("Animation_6xtus"),
"hurt_right": SubResource("Animation_vn7ok"),
"hurt_up": SubResource("Animation_xcehy"),
"hurt_up_left": SubResource("Animation_l5sxy"),
"hurt_up_right": SubResource("Animation_ev0u0"),
"walk_down": SubResource("Animation_qqtqc"),
"walk_down_left": SubResource("Animation_hc8ey"),
"walk_down_right": SubResource("Animation_480vy"),
"walk_left": SubResource("Animation_qyerh"),
"walk_right": SubResource("Animation_xqm7k"),
"walk_up": SubResource("Animation_8giy6"),
"walk_up_left": SubResource("Animation_rgpkr"),
"walk_up_right": SubResource("Animation_lyvn1")
}

[node name="Banette" type="CharacterBody2D"]
position = Vector2(0, 1)
collision_layer = 8
collision_mask = 41
script = ExtResource("1_p6c1o")
health = 100
damage = 2

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(0.5, 0.5)
energy = 0.1
texture = ExtResource("2_qgxs4")

[node name="walk" type="Sprite2D" parent="."]
texture = ExtResource("2_dd7hi")
hframes = 4
vframes = 8

[node name="hurt" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_0drs5")
hframes = 2
vframes = 8

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("CircleShape2D_3w0cr")

[node name="AreaCollider" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 35

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaCollider"]
position = Vector2(0, -9)
shape = SubResource("CircleShape2D_b1amh")

[node name="EnemyAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hgy1n")
}

[node name="healthbar" parent="." instance=ExtResource("3_3skgv")]
visible = false
offset_left = -19.0
offset_top = -27.0
offset_right = 20.0
offset_bottom = -22.0
metadata/_edit_use_anchors_ = true

[node name="DamageDisplay" type="Label" parent="."]
z_index = 3
offset_left = -9.0
offset_top = -37.0
offset_right = 15.0
offset_bottom = -13.0
theme_override_colors/font_color = Color(0.698039, 0, 0, 0.615686)
theme_override_fonts/font = ExtResource("6_oepyp")
theme_override_font_sizes/font_size = 24
script = ExtResource("7_s1g7c")

[node name="DisplayTimer" type="Timer" parent="DamageDisplay"]
wait_time = 0.25
one_shot = true

[connection signal="area_entered" from="AreaCollider" to="." method="_on_collider_area_entered"]
[connection signal="area_exited" from="AreaCollider" to="." method="_on_collider_area_exited"]
[connection signal="timeout" from="DamageDisplay/DisplayTimer" to="DamageDisplay" method="_on_display_timer_timeout"]
